<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/homeStudentTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/student_details"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="20dp"
            android:text="@string/admission_number"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeStudentTxt" />

        <TextView
            android:id="@+id/homeClassTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:text="@string/class_of"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/homeRollNumTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="9dp"
            android:text="@string/roll_no"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/homeMid1Txt"
            app:layout_constraintStart_toStartOf="@+id/homeMid1Txt" />

        <TextView
            android:id="@+id/homeMid1Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="47dp"
            android:text="@string/mid1"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeClassTxt" />

        <TextView
            android:id="@+id/homeMid2Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/mid2"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/homeMid1Txt"
            app:layout_constraintTop_toBottomOf="@+id/homeMid1Txt" />

        <TextView
            android:id="@+id/homeFinalTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/final_term"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/homeMid2Txt"
            app:layout_constraintTop_toBottomOf="@+id/homeMid2Txt" />

        <TextView
            android:id="@+id/homeUserAdmNumTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/homeUserClassTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/homeUserRollTxt"
            app:layout_constraintStart_toStartOf="@+id/homeUserRollTxt"
            app:layout_constraintTop_toBottomOf="@+id/homeUserAdmNumTxt" />

        <TextView
            android:id="@+id/homeUserRollTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/homeUserAdmNumTxt"
            app:layout_constraintTop_toBottomOf="@+id/homeUserClassTxt" />

        <TextView
            android:id="@+id/homeUserMid1Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/homeUserMid2Txt"
            app:layout_constraintStart_toStartOf="@+id/homeUserMid2Txt"
            app:layout_constraintTop_toBottomOf="@+id/homeUserRollTxt" />

        <TextView
            android:id="@+id/homeUserMid2Txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/homeUserFinalTxt"
            app:layout_constraintStart_toStartOf="@+id/homeUserFinalTxt"
            app:layout_constraintTop_toBottomOf="@+id/homeUserMid1Txt" />

        <TextView
            android:id="@+id/homeUserFinalTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="189dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="189dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/homerecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/homeUserMid2Txt" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homerecyclerView"
            android:layout_width="312dp"
            android:layout_height="337dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeFinalTxt"
            app:layout_constraintVertical_bias="1.0" />

        <ProgressBar
            android:id="@+id/recyclerProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/homerecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/homerecyclerView"
            app:layout_constraintStart_toStartOf="@+id/homerecyclerView"
            app:layout_constraintTop_toTopOf="@+id/homerecyclerView" />

        <ProgressBar
            android:id="@+id/homeProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.222" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>