<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250sp"
    android:background="#00FFFFFF">

    <androidx.cardview.widget.CardView
        android:id="@+id/home_rec_list_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/card_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/itemSubCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subject_code"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/itemSubTeacher"
                app:layout_constraintEnd_toStartOf="@+id/itemUserSubCode"
                app:layout_constraintHorizontal_bias="0.186"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.761" />

            <TextView
                android:id="@+id/itemUserSubCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/itemUserSubTeacher"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemSubTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/subject_teacher"
                app:layout_constraintEnd_toEndOf="@+id/itemUserSubTeacher"
                app:layout_constraintHorizontal_bias="0.153"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemSubCode" />

            <TextView
                android:id="@+id/itemUserSubTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/itemUserMid1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemUserSubCode"
                app:layout_constraintVertical_bias="0.096" />

            <TextView
                android:id="@+id/itemPercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/percentages"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/itemMid1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemSubTeacher"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/itemMid1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/mid1"
                app:layout_constraintEnd_toStartOf="@+id/itemUserMid1"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemSubTeacher" />

            <TextView
                android:id="@+id/itemMid2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/mid2"
                app:layout_constraintEnd_toStartOf="@+id/itemUserMid2"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemMid1" />

            <TextView
                android:id="@+id/itemFinalTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_term"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/itemUserFinal"
                app:layout_constraintHorizontal_bias="0.622"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemMid2"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/itemUserMid1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/itemMid2"
                app:layout_constraintEnd_toEndOf="@+id/itemUserMid2" />

            <TextView
                android:id="@+id/itemUserMid2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/itemFinalTerm"
                app:layout_constraintEnd_toEndOf="@+id/itemUserFinal"
                app:layout_constraintTop_toBottomOf="@+id/itemUserMid1" />

            <TextView
                android:id="@+id/itemUserFinal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/itemUserSubCode"
                app:layout_constraintTop_toBottomOf="@+id/itemUserMid2"
                app:layout_constraintVertical_bias="0.25" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>