<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/searchSpinner"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:entries="@array/search_whom_entries"
        android:prompt="@string/search_whom"
        android:scrollbarSize="4dp"
        app:layout_constraintBottom_toTopOf="@+id/searchID"
        app:layout_constraintEnd_toEndOf="@+id/searchWhomTxt"
        app:layout_constraintStart_toEndOf="@+id/searchWhomTxt"
        app:layout_constraintTop_toBottomOf="@+id/searchWhomTxt" />

    <TextView
        android:id="@+id/searchWhomTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="21dp"
        android:text="@string/search_whom"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/searchSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searchID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="431dp"
        android:text="@string/id"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/searchInputID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchSpinner" />

    <EditText
        android:id="@+id/searchInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="157dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/searchID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchID"
        app:layout_constraintTop_toTopOf="@+id/searchID" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="7dp"
        android:background="@drawable/card_background"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="@+id/searchInputID"
        app:layout_constraintTop_toBottomOf="@+id/searchInputID" />

</androidx.constraintlayout.widget.ConstraintLayout>